alerção tamanho de icones e alinhamentos

--- a/src/conhecimentos.html
+++ b/src/conhecimentos.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="cont2_1">
-            <h1 style="padding-left: 350px;">Conhecimentos</h1>
+            <h1>CONHECIMENTOS</h1>
             <ol class="conhecimentos" type="A">
                 <li class="conhecimentos_li">
                     <img class="logo_list" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
