Alterações e adições finais

--- a/src/objetivos.html
+++ b/src/objetivos.html
@@ -29,9 +29,11 @@
             </nav>
         </div>
 
-        <div class="cont2">
+        <div class="cont2_1">
             <ul>
-                <li>Teste   </li>
+                <li class="titulo">Objetivos</li>
+                <li class="li_objetivos">Me tornar um profissional qualificado!</li>
+                <li class="li_objetivos">Desenvolver mais minhas habilidades pessoas para me tornar uma pessoa cada vez melhor!</li>
             </ul>
         </div>
     </div>
