--- a/sobre.html
+++ b/sobre.html
@@ -21,8 +21,8 @@
             <img class="img_perfil" src="../image/foto perfil" alt="foto de perfil" srcset="">
             <nav>
                 <a class="link_active" href="sobre.html"> Sobre </a>
-                <a href="conhecimentos.html"> Conhecimentos </a>
-                <a href="objetivos.html"> Objetivos </a>
+                <a href="src/conhecimentos.html"> Conhecimentos </a>
+                <a href="src/objetivos.html"> Objetivos </a>
             </nav>
         </div>
 
@@ -41,8 +41,6 @@
                         src="../image/github.svg" alt="logo github" srcset=""></a>
             </div>
         </div>
-
-
     </div>
 
 </body>
