--- a/src/conhecimentos.html
+++ b/src/conhecimentos.html
@@ -23,7 +23,7 @@
         <div class="cont1">
             <img class="img_perfil" src="../image/foto perfil" alt="foto de perfil" srcset="">
             <nav>
-                <a href="sobre.html"> Sobre </a>
+                <a href="../sobre.html"> Sobre </a>
                 <a class="link_active" href="conhecimentos.html" > Conhecimentos </a>
                 <a href="objetivos.html"> Objetivos </a>
             </nav>
