--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,9 +36,9 @@
                 adoro programar!</p>
             <div>
                 <a href="https://www.linkedin.com/in/emanoel-saraiva/" target="_blank"><img class="logo_sobre"
-                        src="../image/linkedln.svg" alt="logo linkedln" srcset=""></a>
+                        src="image/linkedln.svg" alt="logo linkedln" srcset=""></a>
                 <a href="https://github.com/EmanoelSaraiva" target="_blank"><img class="logo_sobre"
-                        src="../image/github.svg" alt="logo github" srcset=""></a>
+                        src="image/github.svg" alt="logo github" srcset=""></a>
             </div>
         </div>
     </div>
