--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <div class="first">
 
         <div class="cont1">
-            <img class="img_perfil" src="../image/foto perfil" alt="foto de perfil" srcset="">
+            <img class="img_perfil" src="image/foto perfil" alt="foto de perfil" srcset="">
             <nav>
                 <a class="link_active" href="sobre.html"> Sobre </a>
                 <a href="src/conhecimentos.html"> Conhecimentos </a>
